2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Removed the test case for the gtkrc.
	Ok flat menubars and toolbars works in a sane way, except
	few applications with detachable toolbars.
	Need to investigate on it.
	PS: on the previous commit I forgot (yes I forgot :P) to say
	I've reverted the menuitems to their nicer behaviour ;-)

2008-02-05  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_menuitem):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Should read shadow... works on buttons but not for toolbars.
	Modded gtkrc to TEST.

2008-02-03  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/mist/src/mist-style.c: (mist_style_draw_check),
	(mist_style_draw_option):
	I guess thix should fix 500952, but it's just a 30 seconds patch :)

2008-01-31  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	More contrast

2008-01-30  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_menuitem):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Set the xthickness of GtkMenu to 1px and special cased the menu item
	drawing to not draw a line on the left/right for the radius == 0
	case.
	This helps with usability, as no item is selected after opening a
	context menu, and also helps with menus that have an empty area because
	of scrolling.

2008-01-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Shading improvements in focus, more padding to CL_FOCUS_LABEL

2008-01-28  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	2.13.4 release.

2008-01-28  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* schema/clearlooks.xml.in.in:
	Updated Clearlook's schema file
