@@ -835,8 +835,13 @@ clearlooks_style_draw_box (DRAW_ARGS)
 
 		toolbar.style = clearlooks_style->toolbarstyle;
 
-		/* Only draw the shadows on horizontal toolbars */
-		/* if (shadow_type != GTK_SHADOW_NONE && height < 2*width) */
+		if ((DETAIL ("handlebox_bin") || DETAIL ("dockitem_bin")) && GE_IS_BIN (widget))
+		{
+			GtkWidget* child = gtk_bin_get_child ((GtkBin*) &widget);
+			if (GE_IS_TOOLBAR (child))
+				gtk_widget_style_get (child, "shadow-type", &shadow_type, NULL);
+		}
+
 		if (shadow_type != GTK_SHADOW_NONE)
 			STYLE_FUNCTION(draw_toolbar) (cr, colors, &params, &toolbar, x, y, width, height);
 	}
